k8s/apps/monitoring/checkmk-agent/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cmk-ingress
spec:
  hostnames:
    - "cmk-k8s-cluster-collector.example.com"
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: gateway-api
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: checkmk-kube-agent-cluster-collector
          group: ""
          port: 8080
          weight: 1
